Created my 16 by 16 grid

--- a/etch.html
+++ b/etch.html
@@ -11,10 +11,10 @@
 
 <body>
 
-    <p>Demo Text</p>
+    <p>SexNSKetch</p>
     <div id = container>
         
-        <div class="square"></div>
+        
     </div>
 </body>
 <script src="javascript.js" ></script>
