--- a/etch.html
+++ b/etch.html
@@ -11,11 +11,14 @@
 
 <body>
 
-    <p>SexNSKetch</p>
-    <div id = container>
-        
-        
+    <h1>Etch Whilst You Sketch</h1>
+   
+    <button id="userBttn">Choose Your Grid Size(4,8,12,16,20,24,28,32)</button>
+    <button id="resetBttn">Reset</button>
+    <div id = gridContainer>
+        <div id = grid></div>
     </div>
+
 </body>
 <script src="javascript.js" ></script>
 </html>
